examples/type_system/failing/30_strict_public_unannotated_effectful.flx
public fn log(msg) {
    print(msg)
}

fn main() -> Unit with IO {
    log("strict mode")
}
